--- a/bhoma/xforms/bhoma_under_five.xhtml
+++ b/bhoma/xforms/bhoma_under_five.xhtml
@@ -171,40 +171,50 @@
 
   <input ref="encounter_date">
     <label>Enter Date of Visit</label>
+	<hint> This should be the date the patient visited the clinic</hint>
   </input>
 	
   <select1 ref="encounter_type">
     <label>Do You Wish to Open a New Case?</label>
     <item><label>New Case</label><value>new_case</value></item>
     <item><label>Review</label><value>review</value></item>
+	<hint> Encounter could either be a New Case or Review depending on the type of visit </hint>
   </select1>
 
   <input ref="chw_referral_id">
     <label>Enter CHW Referral # (leave blank if not available)</label>
+	<hint> This is the Referral ID on the Referral Form from the CHW </hint>
   </input>
 
   <input ref="vitals/height">
     <label>Enter Height (cm)</label>
+	<hint> This is the height in centimeters </hint>
   </input>
 	
   <input ref="vitals/weight">
     <label>Enter Weight (kg)</label>
+	<hint> This is the weight in kilograms</hint>
   </input>
 	
   <input ref="vitals/head_circumference">
     <label>Enter Head Circumference</label>
+	<hint> Head circumference should only be measured in children below 2 years, 
+	unless medically indicated for those above 2 years, to the nearest 0.5 of a cm. </hint>
   </input>
 	
   <input ref="vitals/temp">
     <label>Enter Temperature (*C)</label>
+	<hint> This is the weight in kilograms</hint>
   </input>
 	
   <input ref="vitals/resp_rate">
     <label>Enter Respiratory Rate (per minute)</label>
+	<hint> Respiration should be the completed breaths per minute</hint>
   </input>
 	
   <input ref="vitals/heart_rate">
     <label>Enter Heart Rate (per minute)</label>
+	<hint> Heart rate should be measured during a complete minute and recorded on the form as beats per minute </hint>
   </input>
 	
   <select ref="danger_signs">
@@ -214,6 +224,8 @@
     <item><label>Convulsions</label><value>convuls</value></item>
     <item><label>Lethargic / Unconscious</label><value>lethargic</value></item>
     <item><label>None</label><value>none</value></item>
+	<hint> If the child cannot drink or breastfeed, vomits, has convulsions or is lethargic or unconscious, 
+	these according to Integrated Management of Childhood Illness Guidelines are danger or life threatening signs </hint>
 	</select>
 
   <select1 ref="hiv/status">
@@ -254,6 +266,7 @@
     <item><label>&gt; 9 Months: OPV 4</label><value>opv_4</value></item>
     <item><label>&gt; 9 Months: Measles</label><value>measles</value></item>
 	<item><label>None Missing</label><value>none</value></item>
+	<hint> Only missing immunisations are to be selected </hint>
 	</select>
 
   <select1 ref="nutrition/weight_for_age">
@@ -462,6 +475,7 @@
     <item><label>Low weight for age</label><value>low_weight</value></item>
     <item><label>Meningitis</label><value>meningitis</value></item>
     <item><label>Other</label><value>other</value></item>
+	<hint> Select the primary diagnosis done on the patient </hint>
   </select1>
 
   <group>
@@ -474,18 +488,22 @@
       <item><label>Benzodiazeprine</label><value>B</value></item>
       <item><label>Cotrimoxazole</label><value>C</value></item>
       <item><label>Other</label><value>other</value></item>
+	  <hint> Select the prescribed drug from the list </hint>
     </select1>
     
     <input ref="dosage">
       <label>Dosage (mg)</label>
+	  <hint> Enter the prescribed dosage of the drug</hint>
     </input>
 
     <input ref="freq">
       <label>How many times a day?</label>
+	  <hint> Enter the number of times in a day the drug should be taken </hint>
     </input>
 
     <input ref="duration">
       <label>For how many days?</label>
+	  <hint> Enter the number of days the drug should be taken for </hint>
     </input>
 
   </repeat>
@@ -495,6 +513,7 @@
     <label>Was original prescription dispensed?</label>
     <item><label>Yes</label><value>y</value></item>
     <item><label>No</label><value>n</value></item>
+	<hint> Select Yes if the drugs dispensed are the same as those prescribed, and No if otherwise </hint>
   </select1>
 
   <group>
@@ -507,18 +526,22 @@
       <item><label>Benzodiazeprine</label><value>B</value></item>
       <item><label>Cotrimoxazole</label><value>C</value></item>
       <item><label>Other</label><value>other</value></item>
+	  <hint> Select the drug dispensed if not the same as prescribed </hint>
     </select1>
     
     <input ref="dosage">
       <label>Dosage (mg)</label>
+	   <hint> Enter the dosage of the dispensed drug</hint>
     </input>
 
     <input ref="freq">
       <label>How many times a day?</label>
+	  <hint> Enter the number of times in a day the drug should be taken </hint>
     </input>
 
     <input ref="duration">
       <label>For how many days?</label>
+	  <hint> Enter the number of days the drug should be taken for </hint>
     </input>
 
   </repeat>
@@ -530,6 +553,7 @@
     <item><label>Follow Up with the Health Facility</label><value>followup-clinic</value></item>
     <item><label>Follow Up with CHW</label><value>followup-chw</value></item>
     <item><label>Case Closed in Clinic</label><value>closed</value></item>
+	<hint> Select a conculsion for this case </hint>
   </select1>
 
   <input ref="followup_days">
@@ -550,6 +574,7 @@
     <item><label>Death</label><value>death</value></item>
     <item><label>Unknown</label><value>unknown</value></item>
     <item><label>Other</label><value>other</value></item>
+	<hint> Select an outcome for this case </hint>
   </select1>
 
 </h:body>
