Changed help text to remove unnecessary hints

--- a/bhoma/xforms/bhoma_pregnancy.xhtml
+++ b/bhoma/xforms/bhoma_pregnancy.xhtml
@@ -129,8 +129,7 @@
 
   <input ref="first_visit/num_pregs">
     <label>Enter Number of Previous Pregnancies</label>
-	<hint> Enter the total number of all previous pregnancies excluding this one. This number of pregnancies should include all pregnancies 
-	regardless of whether they ended up in live births, abortions, or miscarriage </hint>
+	
   </input>
 
   <input ref="first_visit/num_births">
@@ -161,23 +160,17 @@
 
   <input ref="first_visit/lmp">
     <label>Enter Last Menstrual Period</label>
-	<hint> The LMP is the date of onset of the last menstrual period. Record the patient’s LMP in the format of Day / Month/ Year </hint>
+	<hint> The LMP is the date of onset of the last menstrual period. Record the patient's LMP in the format of Day / Month/ Year </hint>
   </input>
 
   <input ref="first_visit/edd">
     <label>Enter Expected Delivery Date</label>
-	<hint> Calculate and record the patient’s EDD in the format of Day / Month/ Year. The EDD is calculated as follows:	
-	taking the LMP and going back 3 months and then adding one year and 7 days. 
-	For example; if a patient’s LMP is 29/2/97. Going back 3 months gives you 29/9/97.
-	Adding 1 year gives you 29/9/98. Adding 7 days gives you 6/10/98 </hint>
+	
   </input>
 
   <input ref="gestational_age">
     <label>Enter Gestational Age (weeks)</label>
-	<hint> Gestational age toady refers to the time measured from the first day of the woman's last menstrual period (LMP) to the current date. 
-	It is measured in weeks. A normal pregnancy can range from 38 to 42 weeks. For example, If today is 29/5/98 and the LMP of a patient seen 
-	today is 29/12/97, the her gestational age today is 16weeks.
-	</hint>
+	
   </input>
 
   <input ref="blood_pressure">
@@ -194,7 +187,7 @@
     <label>Select Presentation</label>
     <item><label>Breech</label><value>breech</value></item>
     <item><label>Cephalic</label><value>cephalic</value></item>
-	<hint> Use leopold’s maneuver to assess the lie and presentation of the fetus. Tick the corresponding presentation; breech or cephalic.</hint>
+	
   </select1>
 
   <input ref="fetal_heart_rate">
