--- a/bhoma/xforms/bhoma_general.xhtml
+++ b/bhoma/xforms/bhoma_general.xhtml
@@ -280,7 +280,7 @@
   </select>
 
   <select ref="assessment/resp">
-    <label>Assessment: Select Symptoms of Cough/Difficulty Breathing</label>
+    <label>Assessment: Select Symptoms of Cough</label>
     <item><label>SEVERE: very fast breathing</label><value>sev_fast_breath</value></item>
     <item><label>SEVERE: severe chest pain</label><value>sev_chst_pain</value></item>
     <item><label>SEVERE: cannot walk without help</label><value>sev_cant_walk</value></item>
@@ -307,7 +307,7 @@
   </select>
 
   <select ref="assessment/anogen">
-    <label>Assessment: Select Symptoms of Anogenital Ulcer/Sore</label>
+    <label>Assessment: Select Symptoms of Ulcer/Sore</label>
     <item><label>MODERATE: vesicles</label><value>mod_vesicles</value></item>
     <item><label>MODERATE: sore/ulcers</label><value>mod_sores</value></item>
     <item><label>MODERATE: enl. inguinal node</label><value>mod_inguinal</value></item>
@@ -317,7 +317,7 @@
   </select>
 
   <select ref="assessment/dischg_abdom_pain">
-    <label>Assessment: Select Symptoms of Genital Discharge/Abdominal Pain</label>
+    <label>Assessment: Select Symptoms of Discharge/Abd Pain</label>
     <item><label>SEVERE: reboard, guarding, or mass</label><value>sev_mass</value></item>
     <item><label>SEVERE: fever &gt; 38</label><value>sev_fever</value></item>
     <item><label>SEVERE: pulse &gt; 110</label><value>sev_pulse</value></item>
