--- a/bhoma/xforms/bhoma_sick_pregnancy.xhtml
+++ b/bhoma/xforms/bhoma_sick_pregnancy.xhtml
@@ -130,7 +130,7 @@
     <bind nodeset="vitals/temp" type="decimal" constraint=". &gt;= 30 and . &lt;= 50" jr:constraintMsg="Temp should be between 30*C and 50*C" /> <!-- soft constraint -->
     <bind nodeset="vitals/resp_rate" type="int" constraint=". &lt;= 40" jr:constraintMsg="Resp Rate should be less than 40" /> <!-- soft constraint -->
     <bind nodeset="vitals/heart_rate" type="int" constraint=". &lt;= 300" jr:constraintMsg="Heart Rate should be less than 300" /> <!-- soft constraint -->
-    <bind nodeset="vitals/o2_sat" type="decimal" constraint=". &gt;= 40 and . &lt;= 120" jr:constraintMsg="O2Sat should be between 40% and 120%" /> <!-- soft constraint? -->
+    <bind nodeset="vitals/o2_sat" type="decimal" constraint=". &gt;= 40 and . &lt;= 100" jr:constraintMsg="O2Sat should be between 40% and 100%" /> <!-- soft constraint? -->
     <bind nodeset="vitals/fetal_heart_rate" type="int" constraint=". &lt; 300" jr:constraintMsg="Fetal Heart Rate should be less than 300"/>
     <bind nodeset="gestational_age" type="int" constraint=". &lt; 45" jr:constraintMsg="Gestation Age should be less than 45 weeks"/>
 	<bind nodeset="assessment/contract" relevant="selected(../categories, 'contract')" />
@@ -147,12 +147,12 @@
     <bind nodeset="investigations/rdt_mps" relevant="selected(../categories, 'rdt_mps')" />
     <bind nodeset="investigations/hiv_rapid" relevant="selected(../categories, 'hiv_rapid')" />
     <bind nodeset="investigations/cd4" type="int" constraint=". &lt;= 3000" jr:constraintMsg="CD4 count should be less than 3000 (cells/mm3)" relevant="selected(../categories, 'cd4')" />
-    <bind nodeset="investigations/wbc" type="decimal" constraint=". &gt;= 4.3 and . &lt;= 10.8" jr:constraintMsg="WBC should be between 4.3 and 10.8 (*10^9 cells/lt)" relevant="selected(../categories, 'wbc_rbc')" />
-    <bind nodeset="investigations/rbc" type="decimal" constraint=". &gt;= 4.2 and . &lt;= 5.9" jr:constraintMsg="RBC should be between 4.2 and 5.9 (*10^12 cells/lt)" relevant="selected(../categories, 'wbc_rbc')" />
-    <bind nodeset="investigations/hb" type="int" constraint=". &lt;= 18" jr:constraintMsg="HB should be less than 18 (gm/dl)" relevant="selected(../categories, 'hb_plat')" />
-    <bind nodeset="investigations/platelets" type="int" constraint=". &gt;= 150000 and . &lt;= 400000" jr:constraintMsg="Platelets should be between 140000 and 400000 (cmm)" relevant="selected(../categories, 'hb_plat')" />
-    <bind nodeset="investigations/alt" type="decimal" relevant="selected(../categories, 'alt_crea')" />
-    <bind nodeset="investigations/creatine" type="decimal" relevant="selected(../categories, 'alt_crea')" />
+    <bind nodeset="investigations/wbc" type="decimal" constraint=". &lt;= 30.0" jr:constraintMsg="WBC should be less than 30.0 (*10^9 cells/lt)" relevant="selected(../categories, 'wbc_rbc')" />
+    <bind nodeset="investigations/rbc" type="decimal" constraint=". &lt;= 20.0" jr:constraintMsg="RBC should be less than 20.0 (*10^12 cells/lt)" relevant="selected(../categories, 'wbc_rbc')" />
+    <bind nodeset="investigations/hb" type="int" constraint=". &lt;= 25" jr:constraintMsg="Hgb should be less than 25 (gm/dl)" relevant="selected(../categories, 'hb_plat')" />
+    <bind nodeset="investigations/platelets" type="int" constraint=". &lt;= 999999" jr:constraintMsg="Platelets should be less than 999999 (cmm)" relevant="selected(../categories, 'hb_plat')" />
+    <bind nodeset="investigations/alt" type="decimal" constraint=". &lt;= 30000" jr:constraintMsg="Alt should be less than 30000 (U/L)" relevant="selected(../categories, 'alt_crea')" />
+    <bind nodeset="investigations/creatine" type="decimal" constraint=". &lt;= 10.0" jr:constraintMsg="Creatinine should be less than 10.0 (mg/dl)" relevant="selected(../categories, 'alt_crea')" />
     <bind nodeset="investigations/urine" relevant="selected(../categories, 'urine')" />
     <bind nodeset="investigations/stool" relevant="selected(../categories, 'stool')" />
     <bind nodeset="investigations/cxr" relevant="selected(../categories, 'cxr')" />
