support for question hinting info from xform. specifically: custom blood-pressure widget. also added input validation for bp and phone # types

--- a/bhoma/xforms/bhoma_general.xhtml
+++ b/bhoma/xforms/bhoma_general.xhtml
@@ -210,7 +210,7 @@
 	<hint> This is the weight in kilograms</hint>
   </input>
 	
-  <input ref="vitals/bp">
+  <input ref="vitals/bp" appearance="domain: bp;">
     <label>Enter Blood Pressure (___ / ___)</label>
 	<hint> Blood pressure should be recorded as systolic pressure over diastolic pressure </hint> 
   </input>
