Added ethambutol to meds section for all forms Small changes on recommendations of clinicians (linnaea)

--- a/bhoma/xforms/bhoma_delivery.xhtml
+++ b/bhoma/xforms/bhoma_delivery.xhtml
@@ -82,7 +82,7 @@
   </select1>
 
   <input ref="date_of_birth">
-    <label>Enter Date of Birth</label>
+    <label>Enter Date of Delivery</label>
   </input>
 
   <input ref="time_of_birth">
@@ -90,7 +90,7 @@
   </input>
 
   <select1 ref="sex">
-    <label>Select Gender</label>
+    <label>Select Infant's Gender</label>
     <item><label>Male</label><value>m</value></item>
     <item><label>Female</label><value>f</value></item>
   </select1>
