--- a/bhoma/xforms/bhoma_under_five.xhtml
+++ b/bhoma/xforms/bhoma_under_five.xhtml
@@ -551,6 +551,7 @@
 		<item><label>Ergometrine</label><value>ergometrine</value></item>
 		<item><label>Ergometrine / Oxytocin</label><value>ergometrine_oxytocin</value></item>
 		<item><label>Erythromycin</label><value>erythromycin</value></item>
+		<item><label>Ethambutol</label><value>ethambutol</value></item>
 		<item><label>Ethambutol / Isoniazid</label><value>ethambutol_isoniazid</value></item>
 		<item><label>Eth/Isn/Przn/Rfmp (4FDC) </label><value>ethambutol_isoniazid_pyrazinam</value></item>
 		<item><label>Ferrous Sulphate BP</label><value>ferrous_sulphate_bp</value></item>
