--- a/bhoma/xforms/bhoma_general.xhtml
+++ b/bhoma/xforms/bhoma_general.xhtml
@@ -369,7 +369,7 @@
     <item><label>HIV Rapid</label><value>hiv_rapid</value></item>
     <item><label>CD4</label><value>cd4</value></item>
     <item><label>WBC/RBC</label><value>wbc_rbc</value></item>
-    <item><label>HB/Platelets</label><value>hb_plat</value></item>
+    <item><label>Hgb/Platelets</label><value>hb_plat</value></item>
     <item><label>Urine</label><value>urine</value></item>
     <item><label>Stool</label><value>stool</value></item>
     <item><label>CXR</label><value>cxr</value></item>
@@ -409,7 +409,7 @@
   </input>
 
   <input ref="investigations/hb">
-    <label>Enter HB (gm / dL)</label>
+    <label>Enter Hgb (gm / dL)</label>
   </input>
 
   <input ref="investigations/platelets">
@@ -526,6 +526,7 @@
 		<item><label>Ergometrine</label><value>ergometrine</value></item>
 		<item><label>Ergometrine / Oxytocin</label><value>ergometrine_oxytocin</value></item>
 		<item><label>Erythromycin</label><value>erythromycin</value></item>
+		<item><label>Ethambutol</label><value>ethambutol</value></item>
 		<item><label>Ethambutol / Isoniazid</label><value>ethambutol_isoniazid</value></item>
 		<item><label>Eth/Isn/Przn/Rfmp (4FDC) </label><value>ethambutol_isoniazid_pyrazinam</value></item>
 		<item><label>Ferrous Sulphate BP</label><value>ferrous_sulphate_bp</value></item>
