change pallor/oedema/jaundice quesitons to single-select

--- a/bhoma/xforms/bhoma_under_five.xhtml
+++ b/bhoma/xforms/bhoma_under_five.xhtml
@@ -312,14 +312,14 @@
     <item><label>No</label><value>n</value></item>
   </select1>
 
-  <select ref="general_exam">
+  <select1 ref="general_exam">
     <label>Physical Exam -- General</label>
     <item><label>Severe Pallor</label><value>severe_pallor</value></item>
     <item><label>Moderate Pallor</label><value>mod_pallor</value></item>
     <item><label>Jaundice</label><value>jaundice</value></item>
     <item><label>Oedema</label><value>oedema</value></item>
 	<item><label>None Selected</label><value>none</value></item>
- </select>
+ </select1>
 
   <select ref="phys_exam_detail">
     <label>Physical Exam -- Select Any Abnormal Findings...</label>
