--- a/bhoma/xforms/bhoma_general.xhtml
+++ b/bhoma/xforms/bhoma_general.xhtml
@@ -264,7 +264,7 @@
     <item><label>No</label><value>n</value></item>
   </select1>
 
-  <select ref="general_exam">
+  <select1 ref="general_exam">
     <label>Physical Exam -- General:</label>
     <item><label>Severe Pallor</label><value>severe_pallor</value></item>
     <item><label>Moderate Pallor</label><value>mod_pallor</value></item>
@@ -272,7 +272,7 @@
     <item><label>Oedema</label><value>oedema</value></item>
 	<item><label>None Selected</label><value>none</value></item>
 	<hint> Select all physical exams conducted on the patient </hint>
-	</select>
+	</select1>
 
   <select ref="phys_exam_detail">
     <label>Physical Exam -- Select Any Abnormal Findings...</label>
