--- a/bhoma/xforms/bhoma_pregnancy.xhtml
+++ b/bhoma/xforms/bhoma_pregnancy.xhtml
@@ -87,8 +87,10 @@
     <bind nodeset="visit_number" required="true()" />
     <bind nodeset="first_visit" relevant="../visit_number = '1'" />
     <bind nodeset="first_visit/num_pregs" type="int" constraint=". &lt; 30" jr:constraintMsg="Enter a value less than 30" />
-    <bind nodeset="first_visit/num_births" type="int" constraint=". &lt; 30" jr:constraintMsg="Enter a value less than 30" />
-    <bind nodeset="first_visit/num_children" type="int" constraint=". &lt; 30" jr:constraintMsg="Enter a value less than 30" />
+    <bind nodeset="first_visit/num_births" type="int" relevant="../num_pregs &gt; 0" constraint=". &lt; 30" jr:constraintMsg="Enter a value less than 30" />
+    <bind nodeset="first_visit/num_children" type="int" relevant="../num_pregs &gt; 0" constraint=". &lt; 30" jr:constraintMsg="Enter a value less than 30" />
+    <bind nodeset="first_visit/past_complications" relevant="../num_pregs &gt; 0" />
+    <bind nodeset="first_visit/past_caesarian" relevant="../num_pregs &gt; 0" />
     <bind nodeset="first_visit/height" type="int" constraint=". &gt;= 25 and . &lt;= 250" jr:constraintMsg="Height should be between 25 cm and 250 cm" /> <!-- soft constraint? -->
     <bind nodeset="first_visit/lmp" type="date" constraint=". &lt; today() + 5 and . &gt; today() - 180" jr:constraintMsg="LMP Date should be within last 180 days"/>
     <bind nodeset="first_visit/edd" type="date" constraint=". &lt; today() + 365 and . &gt; today() - 90" jr:constraintMsg="EDD Date not possible"/>
