changed a few bugs in phone forms - reworded question to be more applicable - added bind to contact number to make it ask for a number

--- a/bhoma/mobile/bhoma-mobile/bhoma_monthly_chw_survey.xhtml
+++ b/bhoma/mobile/bhoma-mobile/bhoma_monthly_chw_survey.xhtml
@@ -125,7 +125,7 @@
   </select1>
 
   <select ref="problem_detail">
-	<label>How often did you use the phone to record information during a visit?</label>
+	<label>What problems have you had with the phone?</label>
 	<item><label>Lost</label><value>lost</value></item>
 	<item><label>Stolen</label><value>stolen</value></item>
 	<item><label>Screen broken</label><value>broken_screen</value></item>
