small updates to xforms based on Linnaea's comments from clinical perspective

--- a/bhoma/xforms/bhoma_pregnancy.xhtml
+++ b/bhoma/xforms/bhoma_pregnancy.xhtml
@@ -209,7 +209,7 @@
   </select1>
 
   <input ref="hgb">
-    <label>Enter Hgb Amount</label>
+    <label>Enter Hgb Amount (g/dL)</label>
 	<hint> Enter the Hgb Amount</hint>
   </input>
 
@@ -254,7 +254,7 @@
   </select1>
 
   <input ref="cd4">
-    <label>Enter CD4 Count(cells / mm3)</label>
+    <label>Enter CD4 Count (cells / mm3)</label>
   </input>
 
   <select1 ref="on_haart">
