- Added 'None selected' option to case resolution - Shortened a few titles to fit screen space - Added 'None' option to investigation categories

--- a/bhoma/xforms/bhoma_delivery.xhtml
+++ b/bhoma/xforms/bhoma_delivery.xhtml
@@ -129,6 +129,7 @@
     <item><label>Follow Up with the Health Facility</label><value>followup-clinic</value></item>
     <item><label>Follow Up with CHW</label><value>followup-chw</value></item>
     <item><label>Case Closed in Clinic</label><value>closed</value></item>
+	<item><label>None Selected</label><value>none</value></item>
   </select1>
 
   <input ref="followup_days">
