--- a/bhoma/xforms/bhoma_sick_pregnancy.xhtml
+++ b/bhoma/xforms/bhoma_sick_pregnancy.xhtml
@@ -390,7 +390,8 @@
 
   <select ref="investigations/categories">
     <label>Select Investigations Performed</label>
-    <item><label>RDT/MPS</label><value>rdt_mps</value></item>
+    <item><label>None</label><value>none</value></item>
+	<item><label>RDT/MPS</label><value>rdt_mps</value></item>
     <item><label>HIV rapid</label><value>hiv_rapid</value></item>
     <item><label>CD4</label><value>cd4</value></item>
     <item><label>WBC/RBC</label><value>wbc_rbc</value></item>
@@ -791,6 +792,7 @@
     <item><label>Follow Up with the Health Facility</label><value>followup-clinic</value></item>
     <item><label>Follow Up with CHW</label><value>followup-chw</value></item>
     <item><label>Case Closed in Clinic</label><value>closed</value></item>
+	<item><label>None Selected</label><value>none</value></item>
 	<hint> Select a conculsion for this case </hint>
   </select1>
 
