--- a/bhoma/xforms/bhoma_general.xhtml
+++ b/bhoma/xforms/bhoma_general.xhtml
@@ -341,7 +341,7 @@
   </select>
 
   <select ref="assessment/dischg_abdom_pain">
-    <label>Assessment: Select Symptoms of Discharge/Abd Pain</label>
+    <label>Asmnt: Select Symptoms of Discharge/Abd Pain</label>
     <item><label>SEVERE: reboard, guarding, or mass</label><value>sev_mass</value></item>
     <item><label>SEVERE: fever &gt; 38</label><value>sev_fever</value></item>
     <item><label>SEVERE: pulse &gt; 110</label><value>sev_pulse</value></item>
@@ -365,7 +365,8 @@
 
   <select ref="investigations/categories">
     <label>Select Investigations Performed</label>
-    <item><label>RDT/MPS</label><value>rdt_mps</value></item>
+    <item><label>None</label><value>none</value></item>
+	<item><label>RDT/MPS</label><value>rdt_mps</value></item>
     <item><label>HIV Rapid</label><value>hiv_rapid</value></item>
     <item><label>CD4</label><value>cd4</value></item>
     <item><label>WBC/RBC</label><value>wbc_rbc</value></item>
@@ -764,6 +765,7 @@
     <item><label>Follow Up with the Health Facility</label><value>followup-clinic</value></item>
     <item><label>Follow Up with CHW</label><value>followup-chw</value></item>
     <item><label>Case Closed in Clinic</label><value>closed</value></item>
+	<item><label>None Selected</label><value>none</value></item>
 	<hint> Select a conculsion for this case </hint>
   </select1>
 
